removed porsche and fixed nav overflow

--- a/savannahrc-new/source/stylesheets/_navbar.scss
+++ b/savannahrc-new/source/stylesheets/_navbar.scss
@@ -71,6 +71,7 @@
   height: 100px;
   width: 100%;
   position: relative;
+  overflow: hidden;
   .src-logo {
     height: 30px;
     width: auto;
